--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,50 +1,147 @@
-<div class="card">
-    <div class="card-body left-card">
-        <a type="button" routerLink="/edit" class="btn btn-warning float-right btn-sm">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M11.293 1.293a1 1 0 0 1 1.414 0l2 2a1 1 0 0 1 0 1.414l-9 9a1 1 0 0 1-.39.242l-3 1a1 1 0 0 1-1.266-1.265l1-3a1 1 0 0 1 .242-.391l9-9zM12 2l2 2-9 9-3 1 1-3 9-9z"/>
-                <path fill-rule="evenodd" d="M12.146 6.354l-2.5-2.5.708-.708 2.5 2.5-.707.708zM3 10v.5a.5.5 0 0 0 .5.5H4v.5a.5.5 0 0 0 .5.5H5v.5a.5.5 0 0 0 .5.5H6v-1.5a.5.5 0 0 0-.5-.5H5v-.5a.5.5 0 0 0-.5-.5H3z"/>
-            </svg>
-        </a>
-        <h4 class="card-title">taskTitle</h4>
-        <p class="card-text">taskDescription</p>
-        <div class="progress">
-            <div class="progress-bar bg-success w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-    </div>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-            <div id="tache" class="custom-control custom-checkbox">
-                    <input type="checkbox" name="taskID" class="custom-control-input" checked id="featureID">
-                    <label class="custom-control-label" for="featureID">featureName</label>
-                    <!-- <input type="checkbox" onClick="window.location.reload();" name="{{ $task->id }}" class="custom-control-input" id="{{ $feature->id }}">
-                    <label class="custom-control-label" for="{{ $feature->id }}">{{ $feature->name }}</label> -->
-                    
-                <div class="float-right">
-                    <form>
-                        <button class="btn btn-danger btn-sm">
-                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
-                            </svg>
-                        </button>
-                    </form>
+<div class="row mt-3">
+    <div class="col-md-4 mt-2" *ngFor="let task of tasks">
+        <div class="card">
+            <div class="card-body left-card">
+                <button type="button" class="btn btn-warning float-right btn-sm" data-toggle="modal"
+                    [attr.data-target]="'#modal-'+task.id">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M11.293 1.293a1 1 0 0 1 1.414 0l2 2a1 1 0 0 1 0 1.414l-9 9a1 1 0 0 1-.39.242l-3 1a1 1 0 0 1-1.266-1.265l1-3a1 1 0 0 1 .242-.391l9-9zM12 2l2 2-9 9-3 1 1-3 9-9z" />
+                        <path fill-rule="evenodd"
+                            d="M12.146 6.354l-2.5-2.5.708-.708 2.5 2.5-.707.708zM3 10v.5a.5.5 0 0 0 .5.5H4v.5a.5.5 0 0 0 .5.5H5v.5a.5.5 0 0 0 .5.5H6v-1.5a.5.5 0 0 0-.5-.5H5v-.5a.5.5 0 0 0-.5-.5H3z" />
+                    </svg>
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal-{{task.id}}" tabindex="-1" role="dialog" [attr.aria-label]="task.id"
+                    aria-hidden="true">
+                    <div class="modal-dialog" role="form">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title text-center" id="{{task.id}}">Modification de : {{task.title}}
+                                </h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mt-5">
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="{{ task.title }}">Tâche :</label>
+                                            <input type="text" [formControl]="titleControl" class="form-control"
+                                                id="{{ task.title }}" name="title"
+                                                placeholder="Nom de la tâche en cours" value="{{ task.title }}">
+                                            <div *ngIf="titleControl.invalid && (titleControl.dirty || titleControl.touched)"
+                                                class="alert alert-danger mt-2">
+                                                <div *ngIf="titleControl.hasError('required')">
+                                                    Le champ est obligatoire.
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="{{ task.description }}">Description la tâche :</label>
+                                            <textarea [formControl]="descriptionControl" class="form-control"
+                                                id="{{ task.description }}" name="description"
+                                                placeholder="Description">{{ task.description }}</textarea>
+                                            <div *ngIf="descriptionControl.invalid && (descriptionControl.dirty || descriptionControl.touched)"
+                                                class="alert alert-danger mt-2">
+                                                <div *ngIf="descriptionControl.hasError('required')">
+                                                    Le champ est obligatoire.
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn float-right btn-danger"
+                                    (click)="taskDelete(task.id)">Supprimer</button>
+                                <button type="submit" class="btn float-right btn-warning"
+                                    (click)="taskUpdate(task)">Enregistrer modifications</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="float-right mr-2">
-                    <a class="btn btn-warning btn-sm" routerLink="/feature">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M11.293 1.293a1 1 0 0 1 1.414 0l2 2a1 1 0 0 1 0 1.414l-9 9a1 1 0 0 1-.39.242l-3 1a1 1 0 0 1-1.266-1.265l1-3a1 1 0 0 1 .242-.391l9-9zM12 2l2 2-9 9-3 1 1-3 9-9z"/>
-                            <path fill-rule="evenodd" d="M12.146 6.354l-2.5-2.5.708-.708 2.5 2.5-.707.708zM3 10v.5a.5.5 0 0 0 .5.5H4v.5a.5.5 0 0 0 .5.5H5v.5a.5.5 0 0 0 .5.5H6v-1.5a.5.5 0 0 0-.5-.5H5v-.5a.5.5 0 0 0-.5-.5H3z"/>
-                        </svg>
-                    </a>
+                <h4 class="card-title">{{task.title}}</h4>
+                <p class="card-text">{{task.description}}</p>
+                <div class="progress">
+                    <div class="progress-bar bg-success" style="width: 50%" role="progressbar" aria-valuenow="50"
+                        aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
-        </li>
-    </ul>
-    <form>
-        <div class="form-group ml-2 mr-2 border-top">
-            <label class="mt-2" for="titleTask">Nom de la tâche :</label>
-            <input type="text" class="form-control" id="name_feature" name="name" placeholder="Nom de la tâche">
-            <input type="hidden" name="task" value="taskID"> 
-        </div>          
-    </form>
+            <ul class="list-group list-group-flush" *ngFor="let feature of task.features">
+                <li class="list-group-item">
+                    <div id="tache" class="custom-control custom-checkbox">
+                        <input type="checkbox" name="taskID" class="custom-control-input" checked id="featureID">
+                        <label class="custom-control-label" for="featureID">{{feature.name}}</label>
+                        <!-- <input type="checkbox" onClick="window.location.reload();" name="{{ $task->id }}" class="custom-control-input" id="{{ $feature->id }}">
+                            <label class="custom-control-label" for="{{ $feature->id }}">{{ $feature->name }}</label> -->
+                        <div class="float-right">
+                            <form>
+                                <button class="btn btn-danger btn-sm">
+                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill"
+                                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd"
+                                            d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
+                                    </svg>
+                                </button>
+                            </form>
+                        </div>
+                        <div class="float-right mr-2">
+                            <button type="button" class="btn btn-warning float-right btn-sm" data-toggle="modal"
+                                [attr.data-target]="'#modal-'+feature.id">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M11.293 1.293a1 1 0 0 1 1.414 0l2 2a1 1 0 0 1 0 1.414l-9 9a1 1 0 0 1-.39.242l-3 1a1 1 0 0 1-1.266-1.265l1-3a1 1 0 0 1 .242-.391l9-9zM12 2l2 2-9 9-3 1 1-3 9-9z" />
+                                    <path fill-rule="evenodd"
+                                        d="M12.146 6.354l-2.5-2.5.708-.708 2.5 2.5-.707.708zM3 10v.5a.5.5 0 0 0 .5.5H4v.5a.5.5 0 0 0 .5.5H5v.5a.5.5 0 0 0 .5.5H6v-1.5a.5.5 0 0 0-.5-.5H5v-.5a.5.5 0 0 0-.5-.5H3z" />
+                                </svg>
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="modal-{{feature.id}}" tabindex="-1" role="dialog"
+                                [attr.aria-label]="feature.id" aria-hidden="true">
+                                <div class="modal-dialog" role="form">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title text-center" id="{{feature.id}}">Modification de :
+                                                {{task.title}}
+                                            </h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="mt-5">
+                                                <div class="form-group">
+                                                    <label for="{{ feature.name}}">Feature :</label>
+                                                    <input type="text" class="form-control" id="{{ task.title }}"
+                                                        name="title" placeholder="Nom de la tâche en cours"
+                                                        value="{{ feature.name }}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                            <button type="submit" class="btn float-right btn-warning">Enregistrer
+                                                modifications</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <form>
+                <div class="form-group ml-2 mr-2 border-top">
+                    <label class="mt-2" for="titleTask">Nom de la tâche :</label>
+                    <input type="text" class="form-control" id="name_feature" name="name" placeholder="Nom de la tâche">
+                    <input type="hidden" name="task" value="taskID">
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
