--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -54,7 +54,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn float-right btn-primary">Enregistrer</button>
+              <button type="submit" (click)="taskCreate(task)" class="btn float-right btn-primary">Enregistrer</button>
             </div>
           </div>
         </div>
